feat: add prettier to help format the code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,11 +8,13 @@
     "plugin:react/recommended",
     "next/core-web-vitals",
     "airbnb",
-    "airbnb-typescript"
+    "airbnb-typescript",
+    "plugin:prettier/recommended"
   ],
   "plugins": [
     "react",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "prettier"
   ],
   "parserOptions": {
     "ecmaVersion": 11,
