--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "eslint": "8.55.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-next": "14.0.3",
-    "postcss": "8.4.32"
+    "eslint-plugin-prettier": "^5.1.3",
+    "postcss": "8.4.32",
+    "prettier": "^3.2.2"
   }
 }
